--- a/trunk/clientv2/css/technical-charting.css
+++ b/trunk/clientv2/css/technical-charting.css
@@ -10,7 +10,7 @@ div.wrapper {
 
 .technical-charting {
   height:920px;
-  display:none;
+  /*display:none;*/
   position:relative;
   border-right: 1px solid #cacdd3;
   border-left: 1px solid #cacdd3;
@@ -116,15 +116,18 @@ div.wrapper {
   font-size: 11px;
   color: red; }
 
+
 #technical-chart-container {
   /*background: #e7e7e8;*/
-  position:absolute;
-  right:0;
-  display: inline-block;
+  /*position:absolute;*/
+  /*right:0;*/
+ /* display: block;*/
+/* float:right;*/
   height: 475px; }
 
 .indicators, .financials {
-  display: none; }
+  display: none; 
+}
 
 .technical-charting .financials-controls {
   text-align: left;
@@ -261,7 +264,8 @@ div.wrapper {
       background: url(images/right.png) no-repeat; }
 
 .technical-charting-alternative {
-  display: none; }
+  display: none; 
+}
   .technical-charting-alternative .content {
     padding: 20px;
     padding-bottom: 100px;
@@ -277,81 +281,76 @@ div.wrapper {
   margin-top:120px;
 }
 
+
+
+/*//////////////////////////////////////*/
+/*tecnhical charting financials start*/
+/*//////////////////////////////////////*/
+
+#financials-chart-container {
+  width:90%;
+  margin-top: 30px;
+}
+
 .financials-controls select {
-  width: 19%; }
+  width: 18%; }
 
+.financials-dropdown {
+  display: inline-block; }
 
-
-/* DEMO 4 */
+.wrapper-dropdown.financials-dropdown {
+  width: 17%; }
 
 .wrapper-dropdown {
-    /* Size and position */
-    position: relative;
-    width: 270px;
-    margin: 0 auto;
-    padding: 10px 10px 10px 30px;
-
-    /* Styles */
-    background: #fff;
-    border: 1px solid silver;
-    cursor: pointer;
-    outline: none;
-}
+  font-size: 11px;
+  /* Size and position */
+  position: relative;
+/*  width: 270px;*/
+  margin: 0 auto;
+  padding: 6px 6px 6px 10px;
+  z-index: 200;
+  /* Styles */
+  background: #fff;
+  border: 1px solid silver;
+  cursor: pointer;
+  outline: none; }
 
 .wrapper-dropdown:after {
-    content: "";
-    width: 0;
-    height: 0;
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    margin-top: -3px;
-    border-width: 6px 6px 0 6px;
-    border-style: solid;
-    border-color: #ffaa9f transparent;
-}
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-top: -3px;
+  border-width: 6px 6px 0 6px;
+  border-style: solid;
+  border-color: #ffaa9f transparent; }
 
 .wrapper-dropdown .dropdown {
-    /* Size & position */
-    position: absolute;
-    top: 100%;
-    margin-top: 1px;
-    left: -1px;
-    right: -1px;
-
-    /* Styles */
-    background: white;
-    border: inherit;
-    border-top: none;
-    list-style: none;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-  
-    /* Hiding */
-    opacity: 0;
-    pointer-events: none;
-}
-
-/* Red lines: the pseudo-elements way */
-.wrapper-dropdown .dropdown:before,
-.wrapper-dropdown:before {
-    content: "";
-    width:4px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 15px;
-    border: 1px solid #ffaa9f;
-    border-top: none;
-    border-bottom: none;
-    z-index: 2;
-}
+  /* Size & position */
+  position: absolute;
+  top: 100%;
+  margin-top: 1px;
+  left: -1px;
+  right: -1px;
+  padding-top: 0;
+  padding-bottom: 0;
+  /* Styles */
+  background: white;
+  border: inherit;
+  border-top: none;
+  list-style: none;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  /* Hiding */
+  opacity: 0;
+  pointer-events: none; }
 
 /* Red lines: the gradients way */
-
 /*
 .wrapper-dropdown .dropdown,
 .wrapper-dropdown {
@@ -362,68 +361,68 @@ div.wrapper {
   background: linear-gradient(left, #f0F0F0 5%, #ffaa9f 5%, #ffaa9f 5.3%, #f0F0F0 5.3%, #f0F0F0 6.5%, #ffaa9f 6.5%, #ffaa9f 6.8%, #f0F0F0 6.8%);
 }
 */
-
 .wrapper-dropdown .dropdown li {
-    position: relative; /* Enable absolute positioning for checkboxes */
+  position: relative;
+  /* Enable absolute positioning for checkboxes */ }
+
+.wrapper-dropdown .dropdown li span {
+  font-size:11px;
 }
 
 .wrapper-dropdown .dropdown li label {
-    display: block;
-    padding: 10px 10px 10px 30px; /* Same padding as the button */
-    border-bottom: 1px dotted #1ccfcf;
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -ms-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-}
+  display: block;
+  padding: 6px 25px 6px 10px;
+  /* Same padding as the button */
+  border-bottom: 1px dotted #1ccfcf;
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out; }
 
 .wrapper-dropdown .dropdown li:last-of-type label {
-    border: none;
-}
+  border: none; }
 
-.wrapper-dropdown .dropdown li input /* Checkboxes */ {
-    position: absolute;
-    display: block;
-    right: 10px;
-    top: 50%;
-    margin-top: -8px;
-}
+.wrapper-dropdown .dropdown li input {
+  position: absolute;
+  display: block;
+  right: 10px;
+  top: 50%;
+  margin-top: -8px; }
 
 /* Hover state */
-
 .wrapper-dropdown .dropdown li:hover label {
-    background: #f0f0f0;
-}
+  background: #f0f0f0; }
+
+.wrapper-dropdown .dropdown li {
+  z-index: 200; }
+
+.wrapper-dropdown .dropdown li input {
+  pointer-events: none;
+  z-index: 100; }
 
 /* Checked state */
-
 .wrapper-dropdown .dropdown li input:checked ~ label {
-    color: grey;
-    text-decoration: line-through;
-}
+  color: grey;
+  text-decoration: line-through; }
 
 /* Active state */
-
 .wrapper-dropdown.active:after {
-    border-width: 0 6px 6px 6px;
-}
+  border-width: 0 6px 6px 6px; }
 
 .wrapper-dropdown.active .dropdown {
-    opacity: 1;
-    pointer-events: auto;
-}
+  opacity: 1;
+  pointer-events: auto; }
 
 /* No CSS3 support */
-
-.no-opacity       .wrapper-dropdown .dropdown,
+.no-opacity .wrapper-dropdown .dropdown,
 .no-pointerevents .wrapper-dropdown .dropdown {
-    display: none;
-    opacity: 1; /* If opacity support but no pointer-events support */
-    pointer-events: auto; /* If pointer-events support but no pointer-events support */
-}
+  display: none;
+  opacity: 1;
+  /* If opacity support but no pointer-events support */
+  pointer-events: auto;
+  /* If pointer-events support but no pointer-events support */ }
 
-.no-opacity       .wrapper-dropdown.active .dropdown,
+.no-opacity .wrapper-dropdown.active .dropdown,
 .no-pointerevents .wrapper-dropdown.active .dropdown {
-    display: block;
-}
+  display: block; }
