--- a/clientv2/js/client/templates/criteria-select.html
+++ b/clientv2/js/client/templates/criteria-select.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="dropdown">
 			<ul data-bind="foreach: field.buckets">
-				<li data-bind="text: key"></li>
+				<li data-bind="text: $parent.field.hasOwnProperty('labels') && $parent.field.labels.hasOwnProperty(key) ? $parent.field.labels[key] : key, attr: { 'data-value': key } "></li>
 			</ul>
 		</div>
 	</div>
