--- a/clientv2/css/alerts.css
+++ b/clientv2/css/alerts.css
@@ -43,7 +43,7 @@
 .watchlist .results ul { margin: 0; padding: 0; font-size: 12px; font-weight: bold; }
 .watchlist .results ul li { list-style-type: none; margin-bottom: 8px; line-height: 17px; }
 .watchlist .results ul li .add { background: url(../img/add-button.png) no-repeat; height: 17px; width: 17px; display: inline-block; margin: 0 6px 0 0; }
-.watchlist .results ul li .name { font-size: 13px; display: inline-block; position: relative; top: -3px; }
+.watchlist .results ul li .name { font-size: 13px; position: relative; top: -3px; }
 
 .wl-container .alerts { display: inline-block; width: 60%; }
 .wl-container .alerts .price-changes, .alerts .estimates, .alerts .developments { background: #ebecec; }
