--- a/trunk/admin-tool/src/js/components/displayUsersTmpl.html
+++ b/trunk/admin-tool/src/js/components/displayUsersTmpl.html
@@ -48,4 +48,4 @@
 
 <!-- /ko -->
 
-<modal-component params="data: modalData"/></modal-component>
+<modal-component params="data: modalData, adminType: adminType"/></modal-component>
