--- a/trunk/admin-tool/src/js/components/screenerModalTmpl.html
+++ b/trunk/admin-tool/src/js/components/screenerModalTmpl.html
@@ -9,6 +9,9 @@
       </div>
       <div class="modal-body">
         <p data-bind="text:displayText">This account has expired. OR: This account has 11 days left in trial. OR: This account is active and expires on 11/1/2016</p>
+        <!-- ko if: userData().status() == 'PREMIUM' -->
+          <p class="transaction-id">Transaction ID: <span data-bind="text:userData().transactionId"></span></p>
+        <!-- /ko -->
       <hr/>
 
       <!-- ko ifnot:userData().status() == 'ADMIN' || userData().status() == 'MASTER' -->
