--- a/trunk/clientv2/css/style.css
+++ b/trunk/clientv2/css/style.css
@@ -959,6 +959,8 @@ background: url("../img/title-back.png");
 .custom-select { width: 200px; height: 21px; margin: 0 auto; overflow: hidden; background: url(../img/bg-select-arrow.png) no-repeat right #ddd; border: 2px solid #d4d4d4; border-radius: 4px; }
 .custom-select select option { background: #f3f3f3; border-bottom: 2px solid #fff; font-weight: normal !important; }
 
+.login-bar select.currency { background: #ddd; border: 1px solid #fff; }
+
 /** alpha factors */
 
 .alpha-factors {
