--- a/trunk/clientv2/js/client/templates/login-bar.tmpl.html
+++ b/trunk/clientv2/js/client/templates/login-bar.tmpl.html
@@ -19,6 +19,6 @@
 		</ul>
 		<div class="right" data-bind="css: {'hide': (libCurrency() == true)}">
 			<span class="currency">Currency</span>
-			<select data-bind="options: getCurrencies(), value: selectedCurrency, optionsValue: 'id', optionsText: 'name'"></select>
+			<select class="currency" data-bind="options: getCurrencies(), value: selectedCurrency, optionsValue: 'id', optionsText: 'name'"></select>
 		</div>
 	</div>	
