--- a/trunk/clientv2/js/client/templates/company-header.tmpl.html
+++ b/trunk/clientv2/js/client/templates/company-header.tmpl.html
@@ -11,6 +11,7 @@
 			</div>
 		</div>
 		<div class="price right" data-bind="visible: priceData().hasOwnProperty('price')">
+			<div class="current-currency">This company reports in this currency: <span data-bind="text: selectedCurrency()"></span></div>
 			<div class="pricing">
 				<span class="currency" data-bind="text: priceData().currency"></span> 
 				<span class="price" data-bind="text: priceData().price, format: 'number'"></span>
