--- a/trunk/clientv2/js/client/templates/company-header.tmpl.html
+++ b/trunk/clientv2/js/client/templates/company-header.tmpl.html
@@ -30,7 +30,7 @@
 			<div class="right">
 				<a data-bind="siteLink: { id: 'trade', extra: 'code=' + ticker } " class="view">View Retail Brokers</a>
 				<a data-bind="visible: (userStatus() != 'UNAUTHORIZED' && userStatus() != 'EXPIRED'), click: addWatchlist" class="add">Add to Watchlist</a>
-				<a target="_blank" data-bind="attr: { 'href': printLink(ticker) }" class="down-print print-button">Download/Print</a>
+				<!--<a target="_blank" data-bind="attr: { 'href': printLink(ticker) }" class="down-print print-button">Download/Print</a>-->
 			</div>
 		</div>
 	
