--- a/trunk/clientv2/js/client/templates/login-bar.tmpl.html
+++ b/trunk/clientv2/js/client/templates/login-bar.tmpl.html
@@ -17,11 +17,13 @@
 			<li class="alerts" data-bind="css: {'hide': (libAlerts() == true)}"><a data-bind="siteLink: { id: 'alerts'}">Alerts</a></li>
 			<li class="last"><a data-bind="siteLink: { id: 'logout'} ">Sign Out</a></li>
 		</ul>
-		<div class="right" data-bind="css: {'hide': (libCurrency() == true)}">
-			<span class="currency">Currency</span>
-			<select class="currency-select" data-bind="options: getCurrencies(), value: selectedCurrency, optionsValue: 'id', optionsText: 'name'"></select>
+		<div class="right" data-bind="visible: PAGE.userStatus() != 'EXPIRED'">
+			<span class="currency" data-bind="css: {'hide': (libCurrency() == true)}">Currency</span>
+			<select class="currency-select" data-bind="options: getCurrencies(), value: selectedCurrency, optionsValue: 'id', optionsText: 'name', css: {'hide': (libCurrency() == true)}"></select>
+			<span class="currency" data-bind="css: {'hide': (libCurrency() == false)}">Currency</span>
+			<span class="currecncy-sgd" data-bind="css: {'hide': (libCurrency() == false)}">Singapore Dollar</span>
 		</div>
-		<div class="right" data-bind="css: {'hide': (libCurrency() == false)}">
+		<div class="right" data-bind="visible: PAGE.userStatus() == 'EXPIRED'">
 			<span class="currency">Currency</span>
 			<span class="currecncy-sgd">Singapore Dollar</span>
 		</div>
